services/hello-world/http/deployment.yaml
---
# Source: ticketmaster/templates/services/hello-world/http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      terminationGracePeriodSeconds: 90
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: hello-world
      containers:
        - name: hello-world
          image: '258167965416.dkr.ecr.eu-central-1.amazonaws.com/hello-world:40ceae9a72248a22c057e17846721f4ed18fc0f6'
          command: ["poetry", "run", "uvicorn"]
          args:
            - "hello_world.main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8080"
            - "--timeout-keep-alive"
            - "75"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health-check
              port: http
          readinessProbe:
            httpGet:
              path: /readiness-check
              port: http
